--- a/src/style.scss
+++ b/src/style.scss
@@ -15,7 +15,7 @@ div {
     display: block;
 }
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
-@import url('https://fonts.googleapis.com/css?family=Titan+One');
+@import url(https://fonts.googleapis.com/css?family=Titan+One);
 
 $pink    : #ff006a;
 $purple  : #7b00e0;
