--- a/src/style.scss
+++ b/src/style.scss
@@ -34,6 +34,7 @@ body {
     margin: 0;
     height: 100%;
     overflow: hidden;
+    color: red;
 }
 
 .container {
@@ -193,7 +194,7 @@ h1 {
     background-color: rgba($pink, 0.4);
     border-radius: 100%;
     box-shadow: 0 0 2em 1em rgba($pink, 0.4);
-    color: white;
+    color: red;
     margin: 30vh auto;
     position: relative;
     text-align: center;
