--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,7 @@
+:root {
+    --background-color: #ffffff;
+}
+
 *,
 *::before,
 *::after {
@@ -10,6 +14,203 @@ html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
 }
+body {
+    font-family: sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    color: #191b1d;
+    padding: 0;
+    margin: 0;
+
+}
+a {
+    text-decoration: none;
+}
+img {
+    max-width: 100%;
+}
 div {
     display: block;
+}
+h4 {
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #191b1d;
+    font-size: 28px;
+    line-height: 34px;
+    font-weight: 600;
+}
+h6 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: Inter,sans-serif;
+    color: #191b1d;
+    font-size: 1.3em;
+    line-height: 1.3em;
+    font-weight: 600;
+}
+.body-wrapper {
+    width: 100%;
+    overflow: hidden;
+    background-color: #faf8f5; 
+}
+.container {
+    position: relative;
+    max-width: 1280px;
+    padding : 0 clamp(24px, 0.8vw ,40px);
+}
+.section {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2.4rem;
+    padding-bottom: 2.4rem;
+    min-height: 100%;
+}
+.layout-grid {
+    display: grid;
+    grid-auto-columns: 1fr;
+}
+.hero-columns {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    column-gap: 80px;
+    h1 {
+        font-size: 48px;
+        line-height: 56px;
+    }
+    p {
+        color: #474545;
+        font-size: 18px;
+        line-height: 26px;
+    }
+    a {
+        display: inline-block;
+        position: relative;
+        font-size: 18px;
+        line-height: 32px;
+        font-weight: 500;
+        width: 100%;
+    }
+}
+.three-columns {
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.large-text {
+    color: #474545;
+    font-size: 18px;
+    line-height: 26px;
+}
+.card-body {
+    display: flex;
+    padding: 0.8rem 0;
+    width: 100%;
+    flex-direction: column;
+}
+.bootcamp-card-image {
+    width: auto;
+    height: 30vh;
+}
+.fill {
+    padding: 12px 20px;
+    border: 3px solid #191b1d;
+    border-radius: 8px;
+    background-color: #191b1d;
+    box-shadow: none;
+    -webkit-transition: border-color .2s,background-color .2s,box-shadow .2s;
+    transition: border-color .2s,background-color .2s,box-shadow .2s;
+    font-family: Inter,sans-serif;
+    color: #fff;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+}
+.full-line {
+    width: 25%;
+    height: 2px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    background-color: #dfdbd1;
+}
+.small-break {
+    height: 24px;
+}
+.tiny-break {
+    height: 8px;
+}
+.small-text {
+    font-family: Inter,sans-serif;
+    color: #706e6c;
+    font-size: 1em;
+    line-height: 1.3em;
+    font-weight: 400;
+}
+.black {
+    color: #1e1e1e;
+}
+.inline {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    .starts {
+        margin-right: 800px;
+    }
+}
+.title {
+    margin-bottom: 0.8rem;
+    color: rgba(30,30,30,.5);
+    font-size: 13px;
+    line-height: 24px;
+}
+.capitals {
+    margin-bottom: 8px;
+    color: #6d6b6b;
+    font-weight: 500;
+    letter-spacing: .5px;
+    text-transform: uppercase;
+}
+.no-margin {
+    margin-bottom: 0.8rem;
+    color: #191b1d;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 600;
+}
+.block {
+    display: flex;
+    flex-direction: column;
+    .no-margin,.capitals,.large-text {
+        padding-left: 0.8rem;
+    }
+    .no-margin {
+        border-left: 0.1rem solid red;
+    }
+}
+.avatar {
+    width: 2.4rem;
+    height: 2.4rem;
+    margin-right: 0.8rem;
+    border-color: #030132;
+    border: 4px solid black;
+    border-radius: 100px;
+}
+.avatar-container {
+    display: flex;
+}
+.promo-image {
+    border-radius: 12px;
+    background-image: -webkit-gradient(linear,left bottom,left top,from(rgba(26,34,43,.5)),to(rgba(0,0,0,.2))),url("https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/5f8e97a7f04a9f808b94032f_career_hero%20(1).jpg");
+    background-image: linear-gradient(0deg,rgba(26,34,43,.5),rgba(0,0,0,.2)),url("https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/5f8e97a7f04a9f808b94032f_career_hero%20(1).jpg");
+    background-position: 0 0,26% 63%;
+    background-size: auto,cover;
 }
